--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   display: flex;
+  /* overflow-y: hidden; */
 }
 
 nav {
@@ -37,6 +38,7 @@ nav {
   color: #ffffff;
   right: -180px;
   transition: all 0.3s ease;
+  z-index: 1000;
 }
 
 .showMenu {
@@ -64,4 +66,66 @@ nav {
   background-color: #D6D6D6;
   width: 100vw;
   height: 100vh;
+  align-content: center;
+  padding: 0 8px;
+}
+
+.container {
+  position: relative;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, calc(33.33% - 6px));
+  grid-gap: 8px;
+  position: absolute;
+  width: 100%;
+}
+.grid-item {
+  height: 100px;
+  border: black solid 2px;
+  background: radial-gradient(circle, rgba(113,81,95,1) 81%, rgba(0,0,0,1) 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.grid-item:nth-child(3),
+.grid-item:nth-child(5),
+.grid-item:nth-child(9) {
+  animation: flashing .5s infinite;
+}
+@keyframes flashing {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0.6; }
+}
+
+.ball-container {
+  display: grid;
+  grid-template-columns: repeat(3, calc(33.33% - 6px));
+  grid-gap: 8px;
+  position: relative;
+  animation: moveRight 1.5s ease infinite;
+}
+.ball-block {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ball {
+  width: 30px;
+  height: 30px;
+  background-color: #A5F12B;
+  border-radius: 50%;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes moveRight {
+  0% { left: 0%; }
+  100% { left: 66.66%; }
 }
