--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -69,6 +69,7 @@ nav {
   height: 100vh;
   align-content: center;
   padding: 0 8px;
+  overflow-x: clip;
 }
 
 .container {
@@ -104,7 +105,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(3, calc(33.33% - 6px));
   grid-gap: 8px;
-  position: relative;
+  /* position: absolute; */
   animation: moveRight 1.5s ease infinite;
 }
 .ball-block {
@@ -115,6 +116,11 @@ nav {
   justify-content: center;
   align-items: center;
 }
+.ball-block > div {
+  width: 100%;
+  height: 100%;
+  align-content: center;
+}
 .ball {
   width: 30px;
   height: 30px;
@@ -124,9 +130,10 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 @keyframes moveRight {
-  0% { left: 0%; }
-  100% { left: 66.66%; }
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(70%); }
 }
